--- a/readme
+++ b/readme
@@ -2,6 +2,13 @@
 
 这是一个用于魔兽世界的自动按键脚本，可以定时发送指定按键。
 
+## 功能特性
+
+- 自动发送数字键 1 和 2
+- 定时发送数字键 4（288-299秒间隔）
+- 像素颜色变化检测（可选）
+- 多线程安全的按键发送
+
 ## 系统要求
 
 - Windows 操作系统
@@ -11,6 +18,7 @@
 ## 安装步骤
 
 ### 方法1：直接运行（推荐）
+
 1. 克隆仓库
 ```bash
 git clone https://github.com/heroichu/AutomatiWow.git
@@ -26,11 +34,12 @@ pip install -r requirements.txt
 ```bash
 python main.py
 ```
+
 ## 依赖库说明
 
 - `pywin32`: Windows API 调用，用于发送按键和窗口操作
 - `Pillow`: 图像处理，用于屏幕截图和像素检测
-- `numpy`: 数值计算，用于颜色计算
+- `pynput`: 跨平台输入控制，用于鼠标监听
 
 ## 使用说明
 
